# ViewCam-Desktop

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  ViewCam.bat  WINDOWS_RELEASE.md
.github/workflows/: windows-build.yml
Linux-bin/: ViewCam  viewcam.sh
Linux-bin/translations/: viewcam_de.qm  viewcam_fr.qm  viewcam_tr.qm
Windows-bin/translations/: viewcam_en.qm
cmake/: Package.cmake  ViewCamBundle.cmake  ViewCamConfig.h.in  copy_if_exists.cmake
include/core/: Application.h  Constants.h  FrameData.h  Logger.h  QmlDevMode.h  Settings.h
include/gpu/: CpuBackend.h  CudaBackend.h  GpuBackend.h  GpuFrameFilter.h  ProofComputeSpv.h  VulkanComputeBackend.h
include/network/: DeviceDiscovery.h  FrameDecoder.h  StreamReceiver.h
include/ui/: AudioTab.h  CameraPreviewWidget.h  ConnectionPanel.h  MainWindow.h  SettingsTab.h
include/updater/: InstallLayout.h  UpdateChecker.h
include/viewmodels/: AppController.h  AppInfo.h  CameraControlViewModel.h  ConnectionViewModel.h  DeviceListModel.h  FrameView.h  SettingsViewModel.h  VirtualCamViewModel.h
include/virtualcam/: DirectShowVirtualCam.h  FilterRegistrar.h  MFVirtualCamDefs.h  SharedFrameProtocol.h  V4L2LoopbackWriter.h
installer/: viewcam_setup.iss
qml/: AppContent.qml  Main.qml  Theme.qml
qml/components/: Monogram.qml  VcBadge.qml  VcButton.qml  VcCard.qml  VcDeviceCard.qml  VcDeviceRow.qml  VcIcon.qml  VcIconButton.qml  VcIpBox.qml  VcMeter.qml  VcNavItem.qml  VcOptRow.qml  VcPhoneGlyph.qml  VcProBadge.qml  VcProGateDialog.qml  VcSeg.qml  VcSettingRow.qml  VcSlider.qml  VcStatRow.qml  VcToggle.qml  VcTooltip.qml
qml/screens/: AppShell.qml  Launcher.qml  LiveView.qml  RightPanel.qml  SettingsPage.qml  Sidebar.qml  SourcesPage.qml  UpdateBanner.qml  UpdateScreen.qml
release/: update-public-key.hex  update-public-key.pem
resources/: viewcam.rc
scripts/: HOSTING.md  build_msvc_release.ps1  dev.sh  gen_icons.py  install.sh  release.sh  uninstall.sh
src/: main.cpp
src/core/: Application.cpp  Logger.cpp  QmlDevMode.cpp  Settings.cpp
src/gpu/: CudaBackend.cpp  CudaProof.cu  GpuBackendFactory.cpp  VulkanComputeBackend.cpp
src/gpu/shaders/: proof.comp
src/network/: DeviceDiscovery.cpp  FrameDecoder.cpp  StreamReceiver.cpp
src/ui/: AudioTab.cpp  CameraPreviewWidget.cpp  ConnectionPanel.cpp  MainWindow.cpp  SettingsTab.cpp
src/updater/: InstallLayout.cpp  UpdateChecker.cpp
src/updater/helper/: vc_updater_main.cpp
src/viewmodels/: AppController.cpp  AppInfo.cpp  CameraControlViewModel.cpp  ConnectionViewModel.cpp  DeviceListModel.cpp  FrameView.cpp  SettingsViewModel.cpp  VirtualCamViewModel.cpp
src/virtualcam/linux/: V4L2LoopbackWriter.cpp
src/virtualcam/windows/: DirectShowVirtualCam.cpp  FilterRegistrar.cpp  MFVirtualCamManager.cpp  MFVirtualCamManager.h  VcamMFSource.cpp  VcamMFSource.def
src/virtualcam/windows/filter/: VcamFilter.cpp  VcamFilter.def  VcamFilter.h
tools/: fake_phone.py  gen_icon.py  proto_selftest.cpp
translations/: viewcam_ar.ts  viewcam_de.ts  viewcam_en.ts  viewcam_es.ts  viewcam_fr.ts  viewcam_hi.ts  viewcam_ru.ts  viewcam_tr.ts  viewcam_uk.ts  viewcam_zh.ts
